Add more DEBUG_JASS fprintf && fixed the wrong line report

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/openwarcraft3",
+            "preLaunchTask": "build-debug",
             "args": [">","output.log"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build/",
