fix: 修复架构级字段顺序和内存对齐问题
- 修复entityState_t字段顺序与消息协议不匹配问题
- 修复着色器矩阵数组大小从128到256的同步
- 修复类型不匹配警告
- 验证uiFrame_t字段偏移与协议一致性
- 消除潜在的内存访问越界风险

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,8 @@ target_link_libraries(${PROJECT_NAME}
     X11
     m
     jpeg
-    
+    # SDL2
+    # storm
     ${VENDOR_DIR}/sdl/build/libSDL2.a
     ${VENDOR_DIR}/stormlib/build/libstorm.so
 )
