refactor: unify build output dir to ./build and improve parser token allocation
- Move all build artifacts from src/build to ./build
- Update VS Code launch config and build scripts accordingly
- Enhance combine_compile_commands.py to auto-create output dir
- Pass parser context to alloc_token() for consistent diagnostics
- Fix various parser token creation calls to include parser state

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,11 @@
             "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/src/build/openwarcraft3",
+            "program": "${workspaceFolder}/build/openwarcraft3",
             "preLaunchTask": "build-debug",
             "args": [">","output.log"],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/src/build/",
+            "cwd": "${workspaceFolder}/build/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
