Add debug flag and unify source-location tracking
- Introduce DEBUG_JASS compile flag for debug builds
- Move SOURCEREF struct to g_local.h for global use
- Replace inline SOURCEREF creation with create_source_ref()
- Refactor parser whitespace/location updates into helpers
- Ensure accurate line/column tracking in token parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ add_compile_definitions(GL_GLEXT_PROTOTYPES)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 
 # Debug配置
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O0 -D_DEBUG")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O0 -D_DEBUG -DDEBUG_JASS")
 
 # Release配置
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3")
