--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,34 @@
             "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/openwarcraft3",
+            "program": "${workspaceFolder}/build/bin/openwarcraft3",
             "preLaunchTask": "build-debug",
-            "args": [">","output.log"],
+            "args": ["-mpq=/work/war3files/War3.mpq","-map=Maps\\\\Campaign\\\\Human02.w3m"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/build/",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "将反汇编风格设置为 Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) canvas2d",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/bin/canvas2d",
+            "preLaunchTask": "build-debug",
+            "args": ["-mpq=/work/war3files/old/War3.mpq","-map=Maps\\Campaign\\Human02.w3m"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build/",
             "environment": [],
