update git workflow

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,7 +23,7 @@ jobs:
             libstorm-dev
 
       - name: build
-        run: make
+        run: ./build.sh
 
       # - name: test
       #   run: make check
