--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,7 +25,7 @@ jobs:
             libstorm-dev
 
       - name: build
-        run: ./build.sh
+        run: cmake -B build && cmake --build build
 
       # - name: test
       #   run: make check
